--- a/app/src/main/res/layout/activity_binder.xml
+++ b/app/src/main/res/layout/activity_binder.xml
@@ -18,11 +18,11 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:ems="12"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="请输入门店ID"
             android:inputType="number"
+            android:maxLength="12"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textColorHint="@color/text_hint"
@@ -51,5 +51,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:textColor="@color/black"
         android:textSize="32sp"></TextView>
 </RelativeLayout>
