--- a/app/src/main/res/layout/activity_binder.xml
+++ b/app/src/main/res/layout/activity_binder.xml
@@ -20,7 +20,8 @@
             android:background="@null"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:hint="请输入门店ID"
+            android:gravity="center"
+            android:hint="请输入12位门店ID"
             android:inputType="number"
             android:maxLength="12"
             android:padding="10dp"
