--- a/app/src/main/res/layout/activity_binder.xml
+++ b/app/src/main/res/layout/activity_binder.xml
@@ -17,7 +17,7 @@
             android:id="@+id/et_store_no"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:background="@null"
+            android:background="@drawable/selector_focus"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="center"
@@ -39,7 +39,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:background="@drawable/bg_text_login_blue"
+            android:background="@drawable/selector_focus_btn"
             android:paddingTop="5sp"
             android:paddingBottom="5sp"
             android:text="确定"
