--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="right|center_vertical"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/selector_focus_btn"
                 android:onClick="playNext"
                 android:text="播放下一个 " />
 
@@ -39,7 +40,8 @@
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/selector_focus_btn"
                 android:onClick="scanCode"
                 android:text="播放扫码" />
 
@@ -47,7 +49,8 @@
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/selector_focus_btn"
                 android:onClick="undateAd"
                 android:text="响应更新广告" />
         </LinearLayout>
