--- a/app/src/main/res/layout/activity_binder.xml
+++ b/app/src/main/res/layout/activity_binder.xml
@@ -55,4 +55,14 @@
         android:textColor="@color/black"
         android:textSize="32sp"
         android:visibility="gone"></TextView>
+
+    <TextView
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"></TextView>
 </RelativeLayout>
