--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,44 +26,45 @@
         android:id="@+id/tv_speed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right|bottom"></TextView>
+        android:layout_gravity="right|bottom"
+        tools:text="2002kb/s"></TextView>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="right|center_vertical"-->
-<!--            android:layout_marginRight="10dp"-->
-<!--            android:gravity="center_horizontal"-->
-<!--            android:orientation="vertical"-->
-<!--            android:visibility="visible">-->
+    <!--        <LinearLayout-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_gravity="right|center_vertical"-->
+    <!--            android:layout_marginRight="10dp"-->
+    <!--            android:gravity="center_horizontal"-->
+    <!--            android:orientation="vertical"-->
+    <!--            android:visibility="visible">-->
 
-<!--            <Button-->
-<!--                android:id="@+id/button2"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/selector_focus_btn"-->
-<!--                android:onClick="playNext"-->
-<!--                android:padding="4dp"-->
-<!--                android:text="播放下一个 " />-->
+    <!--            <Button-->
+    <!--                android:id="@+id/button2"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:background="@drawable/selector_focus_btn"-->
+    <!--                android:onClick="playNext"-->
+    <!--                android:padding="4dp"-->
+    <!--                android:text="播放下一个 " />-->
 
-<!--            <Button-->
-<!--                android:id="@+id/button3"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="50dp"-->
-<!--                android:background="@drawable/selector_focus_btn"-->
-<!--                android:onClick="scanCode"-->
-<!--                android:padding="4dp"-->
-<!--                android:text="播放扫码广告" />-->
+    <!--            <Button-->
+    <!--                android:id="@+id/button3"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="50dp"-->
+    <!--                android:background="@drawable/selector_focus_btn"-->
+    <!--                android:onClick="scanCode"-->
+    <!--                android:padding="4dp"-->
+    <!--                android:text="播放扫码广告" />-->
 
-<!--            <Button-->
-<!--                android:id="@+id/button4"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="50dp"-->
-<!--                android:background="@drawable/selector_focus_btn"-->
-<!--                android:onClick="undateAd"-->
-<!--                android:padding="4dp"-->
-<!--                android:text="更新广告" />-->
-<!--        </LinearLayout>-->
+    <!--            <Button-->
+    <!--                android:id="@+id/button4"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="50dp"-->
+    <!--                android:background="@drawable/selector_focus_btn"-->
+    <!--                android:onClick="undateAd"-->
+    <!--                android:padding="4dp"-->
+    <!--                android:text="更新广告" />-->
+    <!--        </LinearLayout>-->
 </FrameLayout>
