--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
+        android:keepScreenOn="true"
         app:use_controller="false"></com.waynetoo.videotv.player.SimplePlayerView>
 
     <TextView
