--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,4 +68,19 @@
     <!--                android:padding="4dp"-->
     <!--                android:text="更新广告" />-->
     <!--        </LinearLayout>-->
+
+
+    <!--    <ScrollView-->
+    <!--        android:id="@+id/scroller"-->
+    <!--        android:layout_width="500dp"-->
+    <!--        android:background="#80778088"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_gravity="right|bottom">-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/print_msg"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent" />-->
+
+    <!--    </ScrollView>-->
 </FrameLayout>
